Bug 420424 - remove bogus assertion. r=bz